[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "_betterinput"
version = "0.0.1"
authors = [
  { name="me", email="no },
]
description = "a package to inpliment a better input function"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
